feat: Actualizacion de usuarios y administradores y haztesocio

--- a/historia.html
+++ b/historia.html
@@ -14,9 +14,9 @@
         <li><a href="index.html">Inicio</a></li>
         <li><a href="jugadores.html">Jugadores</a></li>
         <li><a href="galeria.html">Galería</a></li>
-        
         <li><a href="historia.html">Historia y Directiva</a></li>
-        <li><a href="tienda.html">Tienda</a></li><li><a href="haztesocio.html">Hazte Socio</a></li>
+        <li><a href="tienda.html">Tienda</a></li>
+        <li><a href="haztesocio.php">Hazte Socio</a></li>
       </ul>
     </nav>
   </header>
