--- a/galeria.html
+++ b/galeria.html
@@ -16,7 +16,7 @@
                 <li><a href="galeria.html">Galería</a></li>
                 <li><a href="historia.html">Historia y Directiva</a></li>
                 <li><a href="haztesocio.php">Hazte Socio</a></li>
-                <li><a href="tienda.html">Tienda</a></li>
+                <li><a href="tienda.php">Tienda</a></li>
             </ul>
         </nav>
     </header>
