--- a/historia.html
+++ b/historia.html
@@ -25,23 +25,30 @@
     <section class="seccion">
       <h2>Historia del pueblo y del club</h2>
       <p>
-        El Atlético Trelle nace del espíritu deportivo de la parroquia y de su gente. 
-        Surgió para representar al pueblo en las competiciones locales y mantener viva la tradición futbolística.
+        A parroquia de Trelle (nome oficial: Nosa Señora dos Anxos de Trelle) pertence ao concello de Toén, na provincia de Ourense (Galicia). 
+        Está formada por dúas entidades de poboación: Trelle e Trellerma. 
+        O seu nome reflicte unha tradición local galega, e en galégo pode aparecer coma Trelle ou “parroquia de Trelle”. 
+        Historicamente, como moitas parroquias galegas, Trelle desenvolverase ao redor da igrexa parroquial e do territorio rural que 
+        alimentaba a súa economía de base agraria. A relixiosidade popular e o sentido de comunidade teñen sido parte fundamental da súa identidade.
       </p>
-      <ul>
-        <li><strong>Orígenes:</strong> fútbol aficionado y encuentros vecinales.</li>
-        <li><strong>Refundación:</strong> un grupo de jóvenes lo reactiva para competir de forma organizada.</li>
-        <li><strong>Identidad:</strong> trabajo, humildad y compromiso con la comunidad.</li>
-      </ul>
-      <p>
-        Hoy el club actúa como punto de unión social, promoviendo valores de equipo y convivencia.
-      </p>
+    
     </section>
 
     <section class="seccion">
       <h2>¿Por qué se creó?</h2>
       <p>
-        Para ofrecer a la juventud un proyecto deportivo estable y para fortalecer la vida social del pueblo a través del fútbol.
+       O ex-Atlético Trelle naceu coa vocación de representar á parroquia de Trelle e aos seus veciños no mundo do fútbol.
+      Inspirado pola loita comunitaria e polo orgullo local, o club quere reivindicar a súa parroquia como referente deportivo e social.
+      Destacou por:
+
+      Ofrecer un espazo de encontro para mozos e maiores en Trelle, fomentando valores como o traballo en equipo, a participación e o sentido de pertenza.
+
+      Ser un vínculo entre a tradición rural de Trelle e o deporte moderno, preséntase como “o equipo da parroquia”.
+
+      Apostar polo futuro: promovendo a formación de xogadores locais, involucrando ás familias e fortalecendo a comunidade a través do fútbol.
+
+      A evolución do club reflecte non só éxitos ou partidos, senón tamén o crecemento dunha identidade deportiva ligada ao territorio: máis alá dos resultados, 
+      o Atlético Trelle representa esa vontade colectiva de “ser do lugar e para o lugar”.
       </p>
     </section>
 
@@ -50,27 +57,27 @@
       <div class="grid">
         <!-- Rellena con nombres reales -->
         <article class="card">
-          <h3>Nombre Apellido</h3>
+          <h3>Brais Domínguez Airabella</h3>
           <p><em>Presidente/a</em></p>
         </article>
         <article class="card">
-          <h3>Nombre Apellido</h3>
+          <h3>Martín Sumavielle Rodríguez</h3>
           <p><em>Vicepresidente/a</em></p>
         </article>
         <article class="card">
-          <h3>Nombre Apellido</h3>
+          <h3>David Villanueva Álvarez</h3>
           <p><em>Secretario/a</em></p>
         </article>
         <article class="card">
-          <h3>Nombre Apellido</h3>
+          <h3>Joel Verísimo</h3>
           <p><em>Tesorero/a</em></p>
         </article>
         <article class="card">
-          <h3>Nombre Apellido</h3>
+          <h3> Jose Luis Ferreiro Rodicio</h3>
           <p><em>Vocal</em></p>
         </article>
         <article class="card">
-          <h3>Nombre Apellido</h3>
+          <h3>Miguel Santás</h3>
           <p><em>Vocal</em></p>
         </article>
       </div>
